# android-usbser

./: CHANGELOG.md  Cargo.toml  README.md  lib.rs  ser_cdc.rs  usb_conn.rs  usb_info.rs  usb_sync.rs
