[package]
name = "android-usbser"
version = "0.1.1"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuwbobo2021/android-usbser-rs"
readme = "README.md"
description = """
Android host driver for USB serial adapters, currently works with CDC-ACM devices.
"""
keywords = ["usb", "serial", "serialport", "uart", "android"]
categories = ["api-bindings", "hardware-support"]

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30

[package.metadata.docs.rs]
features = ["serialport"]
default-target = "aarch64-linux-android"
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]

[dependencies]
getset = "0.1.3"
jni = "0.21"
libc = "0.2"
ndk = { version = "0.9", features = ["api-level-23"] }
ndk-context = "0.1"

serialport = { version = "4.6", optional = true }
# rusb requires NDK build tools path in PATH environment variable
rusb = { version = "0.9", optional = true }

[features]
default = []
unsafe-rusb = ["dep:rusb"]
serialport = ["dep:serialport"]

[lib]
name = "android_usbser"
path = "lib.rs"
