[package]
name = "android-usbser"
version = "0.2.1"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuwbobo2021/android-usbser-rs"
readme = "README.md"
description = """
Android host driver for USB serial adapters, currently works with CDC-ACM devices.
"""
keywords = ["usb", "serial", "serialport", "uart", "android"]
categories = ["api-bindings", "hardware-support"]

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30

[package.metadata.docs.rs]
default-target = "aarch64-linux-android"
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]

[dependencies]
log = "0.4"
getset = "0.1"
nusb = "0.1.12"
serialport = "4.6"
futures-core = "0.3"
futures-lite = "2.5"
jni-min-helper = { version = "0.2.2", features = ["futures"] }

[lib]
name = "android_usbser"
path = "lib.rs"
